<resources>
    <string name="app_name" translatable="false">TFG-The_Climb_Within</string>
    <string name="play">PLAY</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0" translatable="false">0</string>
    <string name="menu">MENU</string>
    <string name="back_to_battle">Back to battle</string>
    <string name="exit_battle">Exit battle</string>
    <string name="return_to_main_menu">Return to main menu</string>
    <string name="default_web_client_id" translatable="false">1007165425921-669l4v5a8sg9siresi1jn31r7f7th7b1.apps.googleusercontent.com</string>

    <string name="you_don_t_have_cards_for_this_deck_yet">YOU DON\'T HAVE CARDS FOR THIS DECK YET!</string>
    <string name="surprise">Surprise</string>
    <string name="happiness">Happiness</string>
    <string name="disgust">Disgust</string>
    <string name="sadness">Sadness</string>
    <string name="anger">Anger</string>
    <string name="fear">Fear</string>
    <string name="basic">Basic</string>
    <string name="you_have_all_cards_of_this_deck_unlocked_already">YOU HAVE ALL CARDS OF THIS DECK UNLOCKED ALREADY</string>
    <string name="continueButton">CONTINUE</string>
    <string name="new_game">NEW GAME</string>
    <string name="your_cards">YOUR CARDS</string>
    <string name="shop">SHOP</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="stage_cleared">STAGE CLEARED</string>
    <string name="you_lost">YOU LOST</string>

    <string name="play_again">Play again</string>
    <string name="no_more_cards">NO MORE CARDS</string>
    <string name="tower_not_unlocked">Tower not unlocked</string>
    <string name="you_won">YOU WON</string>
    <string name="buy_card">BUY CARD?</string>
    <string name="price">Price:</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="no_cards_to_be_bought">NO CARDS TO BE BOUGHT</string>
    <string name="next_stage">NEXT STAGE</string>
    <string name="touch_to_start">Touch to start…</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="floor">"Floor: "</string>
    <string name="stage">"Stage: "</string>
    <string name="hp_is_full">HP is full</string>
    <string name="signOut">Sign Out</string>

    <string name="language">Language</string>
    <string name="spanish_language_flag">Spanish language flag</string>
    <string name="english_language_flag">English language flag</string>
    <string name="brought_to_you_by">Brought to you by:</string>
    <string name="tom_s" translatable="false">TOmás</string>
    <string name="alejandro" translatable="false">AleJAndro</string>
    <string name="ra_l" translatable="false">RAúl</string>
    <string name="you_can_find_the_source_code_in_our_github_repo">Source code and institution info available below:</string>
    <string name="source_code">Source</string>
    <string name="version">"Version "</string>
    <string name="institution_name" translatable="false">IES</string>
    <string name="not_enough_coins">Not enough coins</string>
    <string name="tutorial_yc_str">Here you can see which cards you\'ve unlocked.</string>
    <string name="tutorial_battle1_str">Now the battle:\nSee those cards? Press once to see effect, press again to play it.</string>
    <string name="tutorial_battle2_str">When does this end? You have to defeat the tower\'s boss. \nAfter a cleared stage you will win ~TOWER COINS~!\nAnd after finishing a run in a tower you will win ~EMOTION COINS~ for that emotion!</string>
    <string name="tutorial_igs_str">Remember those coins? \nAfter a few stages not only you will rest and heal ¼ of your HP, also be able to buy (with ~TOWER COINS~) your unlocked cards and use them in battle!</string>
    <string name="tutorial_lt_str">Want to play a locked tower? No problem! Climb the previous tower at least once and you will be able to play it!</string>
    <string name="tutorial_shop_str">To unlock cards buy them in the global shop!</string>

  <string name="contentDescription_app_title">Title of the app</string>
    <string name="hi_mom">Hi mom!</string>
    <string name="you_never_see_it_coming" translatable="false">YOU NEVER SEE IT COMING! 🎵🃏</string>
    <string name="ja_quote1" translatable="false">♥️️♠️♦️♣️</string>
    <string name="ra_quote1">If I just had a coin for every line of code here…</string>
    <string name="ra_quote2">…I\'d have +5000 coins.</string>
    <string name="to_quote1">Hope Ernesto finds this easter egg.</string>
    <string name="tutorial_shop_title">Shop</string>
    <string name="tutorial_yc_title">Your cards</string>
    <string name="tutorial_battle1_title">Battle (1): mechanics</string>
    <string name="tutorial_battle2_title">Battle (2): stages</string>
    <string name="tutorial_igs_title">In game shop</string>
    <string name="tutorial_lt_title">Locked towers</string>
</resources>