<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"

    android:padding="20dp"
    >

    <!--    MENU TITLE -->
    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="40dp"

        android:text="@string/buy_card"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/comfortaa_bold"
        />

    <LinearLayout
        android:id="@+id/priceData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@id/menuTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/price"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/coins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"
            >

            <ImageView
                android:id="@+id/coinImg"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/custom_faq"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:id="@+id/confirmAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/coinImg"
                android:layout_margin="10dp"

                android:text="asdadadad"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/comfortaa_bold"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/priceData"
        >

        <!--    DONT BUY CARD-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            app:layout_constraintTop_toBottomOf="@id/endGameData"
            android:layout_margin="15dp"

            app:icon="@drawable/cross_icon"
            app:iconGravity="textStart"
            app:iconTint="@color/white"

            android:text="@string/no"
            android:textSize="20sp"
            android:backgroundTint="@android:color/holo_red_light"
            android:textColor="@color/white"
            />

        <!--    BUY CARD -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            app:layout_constraintTop_toBottomOf="@id/endGameData"
            android:layout_margin="15dp"

            app:icon="@drawable/ok_icon"
            app:iconGravity="textStart"
            app:iconTint="@color/white"

            android:text="@string/yes"
            android:textSize="20sp"
            android:backgroundTint="@android:color/holo_green_light"
            android:textColor="@color/white"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>